--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.4.1",
-    "react-native": "0.56.0"
+    "react-native": "0.56.0",
+    "react-native-zoom-us": "^1.0.0"
   },
   "devDependencies": {
     "babel-jest": "23.4.2",
