Add After Android step

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,6 +18,9 @@ buildscript {
 
 allprojects {
     repositories {
+        flatDir {
+            dirs "$rootDir/../node_modules/react-native-zoom-us/android/libs"
+        }
         mavenLocal()
         jcenter()
         maven {
