--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,6 +22,10 @@ buildscript {
 
 allprojects {
     repositories {
+        flatDir {
+            dirs "$rootDir/../node_modules/react-native-zoom-us/android/libs"
+        }
+
         mavenLocal()
         google()
         jcenter()
