--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,3 @@
 rootProject.name = 'ZoomUsTest'
-include ':react-native-zoom-us'
-project(':react-native-zoom-us').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-zoom-us/android')
-
+apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
