--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "16.13.1",
     "react-native": "0.63.3",
-    "react-native-zoom-us": "^5.3.0"
+    "react-native-zoom-us": "5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
