--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "react": "17.0.1",
-    "react-native": "0.64.0",
-    "react-native-zoom-us": "^5.7.0"
+    "react-native": "0.64.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
