--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "react": "17.0.1",
     "react-native": "0.64.0",
-    "react-native-zoom-us": "^5.8.1"
+    "react-native-zoom-us": "5.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
