--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-url-polyfill": "^1.3.0",
-    "react-native-zoom-us": "^5.8.3"
+    "react-native-zoom-us": "5.8.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
