--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-url-polyfill": "^1.3.0",
-    "react-native-zoom-us": "^6.0.1"
+    "react-native-zoom-us": "6.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
