--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,6 +134,13 @@ android {
         javaMaxHeapSize "4g"
     }
 
+    packagingOptions {
+        pickFirst 'lib/arm64-v8a/libc++_shared.so'
+        pickFirst 'lib/x86/libc++_shared.so'
+        pickFirst 'lib/x86_64/libc++_shared.so'
+        pickFirst 'lib/armeabi-v7a/libc++_shared.so'
+    }
+
     defaultConfig {
         applicationId "com.zoomustest"
         minSdkVersion rootProject.ext.minSdkVersion
