--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "metro-react-native-babel-preset": "^0.64.0",
+    "node-fetch": "^3.0.0",
     "react-test-renderer": "17.0.1",
     "typescript": "^3.8.3"
   },
