--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/node-fetch": "2",
     "@types/react-native": "^0.64.0",
     "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^26.6.3",
@@ -30,7 +31,7 @@
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "metro-react-native-babel-preset": "^0.64.0",
-    "node-fetch": "^3.0.0",
+    "node-fetch": "2",
     "react-test-renderer": "17.0.1",
     "typescript": "^3.8.3"
   },
