--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "api:get-jwt": "npx ts-node api/getApiJwtToken.ts > ./api/api.jwt.json",
-    "api:get-zak": "npx ts-node api/getZak.ts",
+    "api:get-zak": "npx ts-node api/getZak.ts > ./api/api.zak.json",
     "sdk:get-jwt": "npx ts-node api/getSdkJwtToken.ts > ./api/sdk.jwt.json"
   },
   "dependencies": {
