--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-url-polyfill": "^1.3.0",
-    "react-native-zoom-us": "6.4.0"
+    "react-native-zoom-us": "^6.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
