Attach activity with back button to trigger leave meeting

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,5 +21,10 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <activity
+        android:name="ch.milosz.reactnative.RNZoomUsActivity"
+        android:configChanges="orientation|screenSize"
+        android:hardwareAccelerated="false"
+      />
     </application>
 </manifest>
