--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "17.0.2",
     "react-native": "0.66.0",
     "react-native-url-polyfill": "^1.3.0",
-    "react-native-zoom-us": "6.9.0"
+    "react-native-zoom-us": "https://github.com/mieszko4/react-native-zoom-us#feat/upgrade-ios-5.10.3.3244"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
