--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "17.0.2",
     "react-native": "0.66.0",
     "react-native-url-polyfill": "^1.3.0",
-    "react-native-zoom-us": "6.9.0"
+    "react-native-zoom-us": "^6.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -34,6 +34,7 @@
     "metro-react-native-babel-preset": "^0.66.2",
     "node-fetch": "2",
     "react-test-renderer": "17.0.2",
+    "ts-node": "^10.8.1",
     "typescript": "^3.8.3"
   },
   "resolutions": {
