--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-zoom-us": "^6.15.1"
   },
   "devDependencies": {
