--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/node-fetch": "2",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
     "@types/react-test-renderer": "^18.0.0",
@@ -32,8 +34,11 @@
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
+    "jsonwebtoken": "^8.5.1",
     "metro-react-native-babel-preset": "0.72.3",
+    "node-fetch": "2",
     "react-test-renderer": "18.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   },
   "jest": {
