WIP: Trying out build settings

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,10 +135,11 @@ android {
     }
 
     packagingOptions {
-        pickFirst 'lib/arm64-v8a/libc++_shared.so'
-        pickFirst 'lib/x86/libc++_shared.so'
-        pickFirst 'lib/x86_64/libc++_shared.so'
-        pickFirst 'lib/armeabi-v7a/libc++_shared.so'
+        //pickFirst 'lib/arm64-v8a/libc++_shared.so'
+        //pickFirst 'lib/x86/libc++_shared.so'
+        //pickFirst 'lib/x86_64/libc++_shared.so'
+        //pickFirst 'lib/armeabi-v7a/libc++_shared.so'
+        pickFirst("**/libc++_shared.so")
     }
 
     defaultConfig {
@@ -169,7 +170,7 @@ android {
             signingConfig signingConfigs.debug
             if (nativeArchitectures) {
                 ndk {
-                    abiFilters nativeArchitectures.split(',')
+                    abiFilters "armeabi-v7a", "x86", "armeabi", "mips"
                 }
             }
         }
