--- a/ios/ZoomUsTest/Info.plist
+++ b/ios/ZoomUsTest/Info.plist
@@ -35,8 +35,16 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>We will use your Bluetooth to access your Bluetooth headphones.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>For people to see you during meetings, we need access to your camera.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>For people to hear you during meetings, we need access to your microphone.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>For people to share, we need access to your photos.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
