--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -7,10 +7,9 @@
     <application
         android:usesCleartextTraffic="true"
         tools:targetApi="28"
+        tools:remove="android:networkSecurityConfig"
         tools:ignore="GoogleAppIndexingWarning"
-        tools:replace="android:usesCleartextTraffic"
-        android:networkSecurityConfig="@xml/network_security_config"
-    >
-        <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+        tools:replace="android:usesCleartextTraffic">
+        <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false" />
     </application>
 </manifest>
