--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "zoomustest",
-  "version": "6.1.5",
+  "name": "ZoomUsTest",
+  "version": "7.0.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -13,32 +13,33 @@
     "sdk:get-jwt": "npx ts-node api/getSdkJwtToken.ts > ./api/sdk.jwt.json"
   },
   "dependencies": {
-    "react": "17.0.2",
-    "react-native": "0.66.0",
+    "react": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-url-polyfill": "^1.3.0",
-    "react-native-zoom-us": "6.13.0"
+    "react-native-zoom-us": "^6.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@types/jest": "^26.0.20",
-    "@types/jsonwebtoken": "^8.5.1",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^26.0.23",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node-fetch": "2",
-    "@types/react-native": "^0.65.0",
-    "@types/react-test-renderer": "^17.0.1",
+    "@types/react": "^18.0.21",
+    "@types/react-native": "^0.70.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.14.0",
+    "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
-    "metro-react-native-babel-preset": "^0.66.2",
+    "metro-react-native-babel-preset": "0.72.3",
     "node-fetch": "2",
-    "react-test-renderer": "17.0.2",
-    "ts-node": "^10.8.1",
-    "typescript": "^3.8.3"
-  },
-  "resolutions": {
-    "@types/react": "^17"
+    "react-test-renderer": "18.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.3"
   },
   "jest": {
     "preset": "react-native",
