Upgrade to react-native 0.72.2
Steps:
1. rm "all except for .git and api"
2. ls -alh
3. npx react-native@0.72.2 init ZoomUsTest --version 0.72.2 (Choose brew for cocoapods)
4. cp -a ZoomUsTest/. react-native-zoom-us-test

Note that new react-native init now comes with TypeScript on default

TODO: Manually apply ZoomUsTest specific changes:
1. package.json:
"version": "0.0.1",
"api:get-jwt": "npx ts-node api/getApiJwtToken.ts > ./api/api.jwt.json",
"api:get-startPersonalMeeting": "npx ts-node api/startPersonalMeeting.ts > ./api/api.startMeeting.json",
"sdk:get-jwt": "npx ts-node api/getSdkJwtToken.ts > ./api/sdk.jwt.json"
"react-native-url-polyfill": "^1.3.0",
"react-native-zoom-us": "^6.17.0"

Maybe: "lint": "eslint . --ext .js,.jsx,.ts,.tsx" ??

2. .eslintrc.js ??
plugins: ['@typescript-eslint'],
  overrides: [
    {
      files: ['*.ts', '*.tsx'],
      rules: {
        '@typescript-eslint/no-shadow': ['error'],
        'no-shadow': 'off',
        'no-undef': 'off',
      },
    },
  ],

3. App.tsx
4. README.md
5. android/app/build.gradle ??
packagingOptions {
        pickFirst 'lib/arm64-v8a/libc++_shared.so'
        pickFirst 'lib/x86/libc++_shared.so'
        pickFirst 'lib/x86_64/libc++_shared.so'
        pickFirst 'lib/armeabi-v7a/libc++_shared.so'
    }
6. android/app/src/main/AndroidManifest.xml
<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
    <uses-permission android:name="android.permission.CAMERA"/>
    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
7. ios/ZoomUsTest.xcodeproj/project.pbxproj ??
PRODUCT_BUNDLE_IDENTIFIER = "ch.milosz.example.$(PRODUCT_NAME:rfc1034identifier)";
DEVELOPMENT_TEAM = 93YJ7F83G7;
8. ios/ZoomUsTest/Info.plist
<key>NSBluetoothPeripheralUsageDescription</key>
<string>We will use your Bluetooth to access your Bluetooth headphones.</string>
<key>NSCameraUsageDescription</key>
<string>For people to see you during meetings, we need access to your camera.</string>
<key>NSMicrophoneUsageDescr

--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -7,9 +7,7 @@
     <application
         android:usesCleartextTraffic="true"
         tools:targetApi="28"
-        tools:remove="android:networkSecurityConfig"
-        tools:ignore="GoogleAppIndexingWarning"
-        tools:replace="android:usesCleartextTraffic">
+        tools:ignore="GoogleAppIndexingWarning">
         <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false" />
     </application>
 </manifest>
