--- a/package.json
+++ b/package.json
@@ -1,55 +1,36 @@
 {
   "name": "ZoomUsTest",
-  "version": "7.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "api:get-jwt": "npx ts-node api/getApiJwtToken.ts > ./api/api.jwt.json",
-    "api:get-startPersonalMeeting": "npx ts-node api/startPersonalMeeting.ts > ./api/api.startMeeting.json",
-    "sdk:get-jwt": "npx ts-node api/getSdkJwtToken.ts > ./api/sdk.jwt.json"
+    "test": "jest"
   },
   "dependencies": {
-    "react": "18.1.0",
-    "react-native": "0.70.12",
-    "react-native-url-polyfill": "^1.3.0",
-    "react-native-zoom-us": "^6.17.0"
+    "react": "18.2.0",
+    "react-native": "0.72.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^26.0.23",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/node-fetch": "2",
-    "@types/react": "^18.0.21",
-    "@types/react-native": "^0.70.6",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native/eslint-config": "^0.72.2",
+    "@react-native/metro-config": "^0.72.9",
+    "@tsconfig/react-native": "^3.0.0",
+    "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.32.0",
-    "jest": "^26.6.3",
-    "jsonwebtoken": "^8.5.1",
-    "metro-react-native-babel-preset": "0.72.3",
-    "node-fetch": "2",
-    "react-test-renderer": "18.1.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.3"
+    "babel-jest": "^29.2.1",
+    "eslint": "^8.19.0",
+    "jest": "^29.2.1",
+    "metro-react-native-babel-preset": "0.76.7",
+    "prettier": "^2.4.1",
+    "react-test-renderer": "18.2.0",
+    "typescript": "4.8.4"
   },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
+  "engines": {
+    "node": ">=16"
   }
 }
