--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.72.2"
+    "react-native": "0.72.2",
+    "react-native-zoom-us": "6.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
