--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.9",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/jsonwebtoken": "9.0.2",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
+    "jsonwebtoken": "9.0.1",
     "metro-react-native-babel-preset": "0.76.7",
+    "node-fetch": "3.3.1",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
