--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-native/metro-config": "^0.72.9",
     "@tsconfig/react-native": "^3.0.0",
     "@types/jsonwebtoken": "9.0.2",
+    "@types/node-fetch": "2.6.4",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
@@ -34,7 +35,7 @@
     "jest": "^29.2.1",
     "jsonwebtoken": "9.0.1",
     "metro-react-native-babel-preset": "0.76.7",
-    "node-fetch": "3.3.1",
+    "node-fetch": "2.6.12",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
