--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "node-fetch": "2.6.12",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
+    "ts-node": "10.9.2",
     "typescript": "4.8.4"
   },
   "engines": {
