--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react": "18.2.0",
     "react-native": "0.72.2",
     "react-native-url-polyfill": "2.0.0",
-    "react-native-zoom-us": "6.19.4"
+    "react-native-zoom-us": "6.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -38,6 +38,7 @@
     "node-fetch": "2.6.12",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
+    "ts-node": "10.9.2",
     "typescript": "4.8.4"
   },
   "engines": {
