--- a/ios/ZoomUsTest/Info.plist
+++ b/ios/ZoomUsTest/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>ZoomUsTest</string>
+	<string>RnDiffApp</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -26,30 +26,19 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-		<key>NSExceptionDomains</key>
-		<dict>
-			<key>localhost</key>
-			<dict>
-				<key>NSExceptionAllowsInsecureHTTPLoads</key>
-				<true/>
-			</dict>
-		</dict>
+	  <!-- Do not change NSAllowsArbitraryLoads to true, or you will risk app rejection! -->
+		<key>NSAllowsArbitraryLoads</key>
+		<false/>
+		<key>NSAllowsLocalNetworking</key>
+		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
-	<key>NSBluetoothPeripheralUsageDescription</key>
-	<string>We will use your Bluetooth to access your Bluetooth headphones.</string>
-	<key>NSCameraUsageDescription</key>
-	<string>For people to see you during meetings, we need access to your camera.</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>For people to hear you during meetings, we need access to your microphone.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>For people to share, we need access to your photos.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
-		<string>armv7</string>
+		<string>arm64</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
