--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.72.2",
+    "react-native": "0.72.17",
     "react-native-url-polyfill": "2.0.0",
     "react-native-zoom-us": "9.0.0"
   },
@@ -24,7 +24,7 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
-    "@react-native/metro-config": "^0.72.9",
+    "@react-native/metro-config": "^0.72.12",
     "@tsconfig/react-native": "^3.0.0",
     "@types/jsonwebtoken": "9.0.2",
     "@types/node-fetch": "2.6.4",
@@ -34,7 +34,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "jsonwebtoken": "9.0.1",
-    "metro-react-native-babel-preset": "0.76.7",
+    "metro-react-native-babel-preset": "^0.76.9",
     "node-fetch": "2.6.12",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
