--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "typecheck": "tsc",
     "start": "react-native start",
     "test": "jest",
-    "api:get-jwt": "npx ts-node api/getApiJwtToken.ts > ./api/api.jwt.json",
-    "api:get-startPersonalMeeting": "npx ts-node api/startPersonalMeeting.ts > ./api/api.startMeeting.json",
+    "api:get-oauth": "npx ts-node api/getOauthToken.ts > ./api/api.oauth.json",
+    "api:get-personal-meeting": "npx ts-node api/getPersonalMeeting.ts > ./api/api.personalMeeting.json",
     "sdk:get-jwt": "npx ts-node api/getSdkJwtToken.ts > ./api/sdk.jwt.json"
   },
   "dependencies": {
@@ -27,7 +27,6 @@
     "@react-native/metro-config": "^0.72.12",
     "@tsconfig/react-native": "^3.0.0",
     "@types/jsonwebtoken": "9.0.2",
-    "@types/node-fetch": "2.6.4",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
@@ -35,14 +34,13 @@
     "jest": "^29.2.1",
     "jsonwebtoken": "9.0.1",
     "metro-react-native-babel-preset": "^0.76.9",
-    "node-fetch": "2.6.12",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "ts-node": "10.9.2",
     "typescript": "4.8.4"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
   "packageManager": "yarn@1.22.22"
 }
