--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.3.1",
     "react-native": "0.77.3",
     "react-native-url-polyfill": "2.0.0",
+    "react-native-video": "^6.17.0",
     "react-native-zoom-us": "15.0.0"
   },
   "devDependencies": {
