--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sdk:get-jwt": "npx ts-node api/getSdkJwtToken.ts > ./api/sdk.jwt.json"
   },
   "dependencies": {
+    "expo": "~53.0.0",
     "react": "19.0.0",
     "react-native": "0.79.7",
     "react-native-url-polyfill": "2.0.0",
@@ -34,6 +35,7 @@
     "@types/jsonwebtoken": "9.0.2",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
+    "babel-preset-expo": "~13.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "jsonwebtoken": "9.0.1",
